@@ -1,0 +1,266 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u97d3\u570b\u4f5c\u5bb6\u97d3\u6c5f\u7372\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff01\u9996\u4f4d\u4e9e\u6d32\u5973\u6027\u5f97\u4e3b\u611f\u8b1d\u4e4b\u8072", "description": "\u97d3\u570b\u4f5c\u5bb6\u97d3\u6c5f\u7372\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff01\u9996\u4f4d\u4e9e\u6d32\u5973\u6027\u5f97\u4e3b\u611f\u8b1d\u4e4b\u8072", "url": "https://www.famechos.me/news/\u97d3\u570b\u4f5c\u5bb6\u97d3\u6c5f\u7372\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff01\u9996\u4f4d\u4e9e\u6d32\u5973\u6027\u5f97\u4e3b\u611f\u8b1d\u4e4b\u8072.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T14:28:17.383716+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲.html"/>
+<meta name="description" content="韓國作家韓江獲諾貝爾文學獎，成為首位亞洲女性得主。韓江在獲獎後表達感謝之聲，分享得獎心得。">
+
+<meta name="keywords" content="韓江、諾貝爾文學獎、亞洲女性、韓國作家、文學獎項">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲.html" />
+        <meta property="og:title" content="韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲" />
+        <meta property="og:description" content="韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲" />
+        <meta property="twitter:description" content="韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>韓國作家韓江最近成為首位獲得諾貝爾文學獎的韓國人，她在獲獎後表達了深深的感謝。</p>
+<p>韓江在一份聲明中說，她最初得知獲獎消息時感到驚訝，隨後情感慢慢沉澱下來。她還表示，面對大量祝賀消息，她感到不知所措，但想表達深深的感謝。</p>
+<p>據悉，韓江考慮到全球衝突的嚴重性，包括俄羅斯和烏克蘭之間的衝突，以及以色列和哈马斯激進組織之間的衝突，決定不舉行新聞發布會。</p>
+<p>出版商宣布，韓江將在12月10日於斯德哥爾摩的諾貝爾獎頒獎典禮上通過她的獲獎演說分享她的想法。</p>
+<p>瑞典學院認可韓江“以她強烈的詩意散文，直面歷史創傷，揭露人類生命的脆弱”，授予她今年的諾貝爾文學獎。</p>
+<p>韓江是第一位亞洲女性諾貝爾文學獎得主，也是繼2000年獲得和平獎的前總統金大中之後，第二位韓國諾貝爾獎得主。</p>
+<p>根據您的要求，我處理了文章內容。以下是處理好的中文HTML結構：</p>
+<h2>據北韓媒體報導，首爾派遣無人機飛越平壤</h2>
+<p>據北韓媒體報導，首爾派遣無人機飛越平壤。這一事件引起了廣泛關注，外界猜測這可能是韓國軍方的偵察行動。</p>
+<h2>國家安全顧問：美日韓三國領導人峰會預計於2024年底召開</h2>
+<p>國家安全顧問表示，美日韓三國領導人峰會預計將於2024年底舉行。這一峰會將討論三國之間的合作與安全問題。</p>
+<p>請注意，我已經刪除了宣傳部分、格式的段落、圖片來源、記者報道等無關文章主旨的內容，並改寫了身份、句式和內容，以符合您的要求。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SaJjB3-cUNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？.html">釜山國際電影節觀眾人數破紀錄！145,000名影迷齊聚一堂，誰是今年的最大贏家？</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵.html">韓寒獲諾貝爾文學獎後，韓國文學界的全球躍升：譯者的角色成關鍵</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/震驚！韓國小說家女兒獲諾貝爾文學獎，父親韓勝源：像整個世界都被顛倒了.html">震驚！韓國小說家女兒獲諾貝爾文學獎，父親韓勝源：像整個世界都被顛倒了</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
