@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 14:26:36 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 14:28:25 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -225,5 +225,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>杰西的粉絲遭到攻擊後，杰西道歉...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 14:26:36 +0800</pubDate>
+</item><item>
+  <title>韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲</title>
+  <link>https://www.famechos.me/news/韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲.html</link>
+  <description>韓江對諾貝爾文學獎獲獎祝賀消息表示深深感謝。韓國作家韓江最近成為首位獲得諾貝爾文學獎的韓國人，她在獲獎後表達了深深的感謝。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 14:28:25 +0800</pubDate>
 </item></channel>
 </rss>
