@@ -224,4 +224,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/韓國作家韓江獲諾貝爾文學獎！首位亞洲女性得主感謝之聲.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T14:28:25+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
